force-app/main/default/objects/Logger_Configuration__c/Logger_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Logger Configuration</label>
</CustomObject>