force-app/main/default/objects/Logger_Configuration__c/fields/Asynchronous_Mode__c.field-meta.xml
<CustomField>
    <fullName>Asynchronous_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Log Record Inserting is active, all records are inserted through a Queueable job outside of the scope of the original transaction.</description>
    <inlineHelpText>If Log Record Inserting is active, all records are inserted through a Queueable job outside of the scope of the original transaction.</inlineHelpText>
    <label>Asynchronous Mode</label>
    <type>Checkbox</type>
</CustomField>