force-app/main/default/objects/Logger_Configuration__c/fields/Event_Based_Logging__c.field-meta.xml
<CustomField>
    <fullName>Event_Based_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Based Logging</label>
    <type>Checkbox</type>
</CustomField>