force-app/main/default/objects/Logger_Configuration__c/fields/Highest_Log_Level_for_Insert__c.field-meta.xml
<CustomField>
    <fullName>Highest_Log_Level_for_Insert__c</fullName>
    <defaultValue>&apos;INFO&apos;</defaultValue>
    <description>If Log Record Inserting is active, only logs with lower or equal levels to this are inserted.</description>
    <inlineHelpText>If Log Record Inserting is active, only logs with lower or equal levels to this are inserted.
Enter one of the values from below (listed from lowest to the highest):
ERROR
WARN
INFO
DEBUG
FINE
FINER
FINEST</inlineHelpText>
    <label>Highest Log Level for Insert</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>