force-app/main/default/objects/Logger_Configuration__c/fields/Log_Inserting_Active__c.field-meta.xml
<CustomField>
    <fullName>Log_Inserting_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, log records with logging level lower or equal to the value of &quot;Highest Log Level for Insert&quot; are inserted into the database with detailed information.</description>
    <inlineHelpText>If set to true, log records with logging level lower or equal to the value of &quot;Highest Log Level for Insert&quot; are inserted into the database with detailed information.</inlineHelpText>
    <label>Log Inserting Active</label>
    <type>Checkbox</type>
</CustomField>